--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         button:hover { background-color: #45a049; }
         #clearButton { margin-top: 10px; }
         #logButton { margin-top: 10px; display: none; }
+        #goToLogButton { margin-top: 10px; }
         #result { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
     </style>
 </head>
@@ -30,7 +31,14 @@
     <button id="clearButton" onclick="clearFields()">Clear</button>
     <div id="result"></div>
     <button id="logButton" onclick="logPoints()">Log it</button>
+    <button id="goToLogButton" onclick="goToLog()">Go to Log</button>
     <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/points-calculator-beta/sw.js')
+                .then(() => console.log('Service Worker Registered in index.html'))
+                .catch(error => console.log('Service Worker Registration Failed in index.html:', error));
+        }
+
         function calculatePoints() {
             const calories = parseFloat(document.getElementById('calories').value) || 0;
             const fat = parseFloat(document.getElementById('fat').value) || 0;
@@ -51,7 +59,13 @@
         }
 
         function logPoints() {
-            window.location.href = 'log.html';
+            console.log('Navigating to: https://mb686.github.io/points-calculator-beta/log.html');
+            window.location.href = 'https://mb686.github.io/points-calculator-beta/log.html';
+        }
+
+        function goToLog() {
+            console.log('Navigating to: https://mb686.github.io/points-calculator-beta/log.html');
+            window.location.href = 'https://mb686.github.io/points-calculator-beta/log.html';
         }
     </script>
 </body>
