--- a/log.html
+++ b/log.html
@@ -9,7 +9,7 @@
     <style>
         body { font-family: Arial, sans-serif; max-width: 400px; margin: 0 auto; padding: 20px; }
         h1 { width: 75%; margin: 0 auto; text-align: left; }
-        label { display: block; margin: 10px 0 5px; font-size: 18px; width: 75%; text-align: left; }
+        label { display: block; margin: 10px auto 5px; font-size: 18px; width: 75%; text-align: left; }
         input { width: 75%; padding: 8px; box-sizing: border-box; margin: 0 auto; display: block; font-size: 16px; }
         button { width: 75%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer; margin: 20px auto 0; display: block; font-size: 18px; }
         button:hover { background-color: #45a049; }
@@ -75,7 +75,6 @@
         function goHome() {
             console.log('Navigating to: https://mb686.github.io/points-calculator-beta/index.html');
             window.location.href = 'https://mb686.github.io/points-calculator-beta/index.html';
-            // Fallback: window.location.href = 'index.html';
         }
 
         window.onload = loadJournal;
