--- a/log.html
+++ b/log.html
@@ -14,8 +14,12 @@
         button { width: 75%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer; margin: 20px auto 0; display: block; font-size: 18px; }
         button:hover { background-color: #45a049; }
         #homeButton { margin-top: 10px; }
+        #resetButton { margin-top: 10px; background-color: #f44336; }
+        #resetButton:hover { background-color: #d32f2f; }
         #logTable { width: 75%; margin: 20px auto 0; border-collapse: collapse; }
         #logTable th, #logTable td { border: 1px solid #ccc; padding: 8px; text-align: left; font-size: 16px; }
+        #logTable button { width: auto; margin: 0; padding: 5px 10px; font-size: 14px; background-color: #f44336; }
+        #logTable button:hover { background-color: #d32f2f; }
         #pointsSummary { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
         #pointsTarget { margin: 10px auto 5px; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
         #pointsToAddDisplay { margin: 5px auto 20px; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
@@ -34,11 +38,13 @@
             <tr>
                 <th>Food</th>
                 <th>Points</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody id="logBody"></tbody>
     </table>
     <div id="pointsSummary"></div>
+    <button id="resetButton" onclick="resetAll()">Reset All</button>
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/points-calculator-beta/sw.js')
@@ -54,9 +60,9 @@
             document.getElementById('pointsToAddDisplay').innerText = currentPoints > 0 ? `Points to be added: ${currentPoints}` : '';
             const logBody = document.getElementById('logBody');
             logBody.innerHTML = '';
-            log.forEach(entry => {
+            log.forEach((entry, index) => {
                 const row = document.createElement('tr');
-                row.innerHTML = `<td>${entry.food}</td><td>${entry.points}</td>`;
+                row.innerHTML = `<td>${entry.food}</td><td>${entry.points}</td><td><button onclick="deleteEntry(${index})">Delete</button></td>`;
                 logBody.appendChild(row);
             });
             const totalPoints = log.reduce((sum, entry) => sum + entry.points, 0);
@@ -74,6 +80,18 @@
                 localStorage.removeItem('currentPoints');
                 loadJournal();
             }
+        }
+
+        function deleteEntry(index) {
+            const log = JSON.parse(localStorage.getItem('pointsLog') || '[]');
+            log.splice(index, 1);
+            localStorage.setItem('pointsLog', JSON.stringify(log));
+            loadJournal();
+        }
+
+        function resetAll() {
+            localStorage.removeItem('pointsLog');
+            loadJournal();
         }
 
         function goHome() {
