--- a/log.html
+++ b/log.html
@@ -22,13 +22,13 @@
         #logTable button:hover { background-color: #d32f2f; }
         #pointsSummary { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
         #pointsTarget { margin: 10px auto 5px; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
-        #pointsToAddDisplay { margin: 5px auto 20px; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
     </style>
 </head>
 <body>
     <h1>Daily Points Journal</h1>
     <div id="pointsTarget"></div>
-    <div id="pointsToAddDisplay"></div>
+    <label for="points">Points:</label>
+    <input type="number" id="points" placeholder="Enter points">
     <label for="food">Food Description:</label>
     <input type="text" id="food" placeholder="Enter food description">
     <button onclick="saveLog()">Save</button>
@@ -57,7 +57,7 @@
             const dailyBudget = parseFloat(localStorage.getItem('dailyBudget') || '36');
             const currentPoints = parseFloat(localStorage.getItem('currentPoints') || '0');
             document.getElementById('pointsTarget').innerText = `Daily Points Target: ${dailyBudget}`;
-            document.getElementById('pointsToAddDisplay').innerText = currentPoints > 0 ? `Points to be added: ${currentPoints}` : '';
+            document.getElementById('points').value = currentPoints > 0 ? currentPoints : '';
             const logBody = document.getElementById('logBody');
             logBody.innerHTML = '';
             log.forEach((entry, index) => {
@@ -71,12 +71,13 @@
 
         function saveLog() {
             const food = document.getElementById('food').value.trim();
-            const points = parseFloat(localStorage.getItem('currentPoints') || '0');
+            const points = parseFloat(document.getElementById('points').value) || 0;
             if (food && points > 0) {
                 const log = JSON.parse(localStorage.getItem('pointsLog') || '[]');
                 log.push({ food, points });
                 localStorage.setItem('pointsLog', JSON.stringify(log));
                 document.getElementById('food').value = '';
+                document.getElementById('points').value = '';
                 localStorage.removeItem('currentPoints');
                 loadJournal();
             }
