--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         button:hover { background-color: #45a049; }
         #logButton { display: none; }
         #result { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
+        #pointsTarget { margin: 10px auto 5px; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
     </style>
 </head>
 <body>
     <h1>Weight Watchers Points Calculator (Beta)</h1>
+    <div id="pointsTarget"></div>
     <label for="calories">Calories:</label>
     <input type="number" id="calories" placeholder="Enter calories">
     <label for="fat">Fat (grams):</label>
@@ -38,6 +40,11 @@
             navigator.serviceWorker.register('/points-calculator-beta/sw.js')
                 .then(() => console.log('Service Worker Registered in index.html'))
                 .catch(error => console.log('Service Worker Registration Failed in index.html:', error));
+        }
+
+        function loadPointsTarget() {
+            const dailyBudget = parseFloat(localStorage.getItem('dailyBudget') || '36');
+            document.getElementById('pointsTarget').innerText = `Daily Points Target: ${dailyBudget}`;
         }
 
         function calculatePoints() {
@@ -68,6 +75,8 @@
             console.log('Navigating to: https://mb686.github.io/points-calculator-beta/log.html');
             window.location.href = 'https://mb686.github.io/points-calculator-beta/log.html';
         }
+
+        window.onload = loadPointsTarget;
     </script>
 </body>
 </html>
