--- a/log.html
+++ b/log.html
@@ -13,6 +13,8 @@
         input { width: 75%; padding: 8px; box-sizing: border-box; margin: 0 auto; display: block; font-size: 16px; }
         button { width: 75%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer; margin: 20px auto 0; display: block; font-size: 18px; }
         button:hover { background-color: #45a049; }
+        #setTargetButton { margin-top: 10px; }
+        #saveButton { margin-top: 10px; }
         #homeButton { margin-top: 10px; }
         #resetButton { margin-top: 10px; background-color: #f44336; }
         #resetButton:hover { background-color: #d32f2f; }
@@ -27,11 +29,14 @@
 <body>
     <h1>Daily Points Journal</h1>
     <div id="pointsTarget"></div>
+    <label for="dailyBudget">Daily Points Target:</label>
+    <input type="number" id="dailyBudget" placeholder="Enter daily points target">
+    <button id="setTargetButton" onclick="setDailyBudget()">Set Target</button>
     <label for="points">Points:</label>
     <input type="number" id="points" placeholder="Enter points">
     <label for="food">Food Description:</label>
     <input type="text" id="food" placeholder="Enter food description">
-    <button onclick="saveLog()">Save</button>
+    <button id="saveButton" onclick="saveLog()">Save</button>
     <button id="homeButton" onclick="goHome()">Home</button>
     <table id="logTable">
         <thead>
@@ -67,6 +72,15 @@
             });
             const totalPoints = log.reduce((sum, entry) => sum + entry.points, 0);
             document.getElementById('pointsSummary').innerText = `Points Spent: ${totalPoints} | Points Remaining: ${Math.max(0, dailyBudget - totalPoints)}`;
+        }
+
+        function setDailyBudget() {
+            const dailyBudget = parseFloat(document.getElementById('dailyBudget').value) || 36;
+            if (dailyBudget > 0) {
+                localStorage.setItem('dailyBudget', dailyBudget);
+                document.getElementById('dailyBudget').value = '';
+                loadJournal();
+            }
         }
 
         function saveLog() {
