--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <button id="clearButton" onclick="clearFields()">Clear</button>
         <button id="logButton" onclick="logPoints()">Log it</button>
         <button id="goToLogButton" onclick="goToLog()">Go to Log</button>
+        <button id="weightTrackerButton" onclick="goToWeightTracker()">Weight Tracker</button>
     </div>
     <div id="result"></div>
     <script>
@@ -74,6 +75,11 @@
         function goToLog() {
             console.log('Navigating to: https://mb686.github.io/points-calculator-beta/log.html');
             window.location.href = 'https://mb686.github.io/points-calculator-beta/log.html';
+        }
+
+        function goToWeightTracker() {
+            console.log('Navigating to: https://mb686.github.io/points-calculator-beta/weight.html');
+            window.location.href = 'https://mb686.github.io/points-calculator-beta/weight.html';
         }
 
         window.onload = loadPointsTarget;
