--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button onclick="calculatePoints()">Calculate</button>
         <button id="clearButton" onclick="clearFields()">Clear</button>
         <button id="logButton" onclick="logPoints()">Log it</button>
-        <button id="goToLogButton" onclick="goToLog()">Go to Log</button>
+        <button id="goToPointsJournalButton" onclick="goToPointsJournal()">Points Journal</button>
         <button id="weightTrackerButton" onclick="goToWeightTracker()">Weight Tracker</button>
     </div>
     <div id="result"></div>
@@ -72,7 +72,7 @@
             window.location.href = 'https://mb686.github.io/points-calculator-beta/log.html';
         }
 
-        function goToLog() {
+        function goToPointsJournal() {
             console.log('Navigating to: https://mb686.github.io/points-calculator-beta/log.html');
             window.location.href = 'https://mb686.github.io/points-calculator-beta/log.html';
         }
