--- a/log.html
+++ b/log.html
@@ -8,47 +8,52 @@
     <link rel="apple-touch-icon" href="icon.png">
     <style>
         body { font-family: Arial, sans-serif; max-width: 400px; margin: 0 auto; padding: 20px; }
-        h1 { width: 75%; margin: 0 auto; text-align: left; }
+        h1 { width: 75%; margin: 0 auto; text-align: center; }
         label { display: block; margin: 10px auto 5px; font-size: 18px; width: 75%; text-align: left; }
         input { width: 75%; padding: 8px; box-sizing: border-box; margin: 0 auto; display: block; font-size: 16px; }
+        .target-section { width: 75%; margin: 0 auto 10px; border: 2px solid #ccc; padding: 10px; }
+        .journal-section { width: 75%; margin: 0 auto; border: 2px solid #ccc; padding: 10px; }
         button { width: 75%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer; margin: 20px auto 0; display: block; font-size: 18px; }
         button:hover { background-color: #45a049; }
-        #setTargetButton { margin-top: 10px; }
         #saveButton { margin-top: 10px; }
         #homeButton { margin-top: 10px; }
         #resetButton { margin-top: 10px; background-color: #f44336; }
         #resetButton:hover { background-color: #d32f2f; }
-        #logTable { width: 75%; margin: 20px auto 0; border-collapse: collapse; }
+        #logTable { width: 100%; margin: 20px auto 0; border-collapse: collapse; }
         #logTable th, #logTable td { border: 1px solid #ccc; padding: 8px; text-align: left; font-size: 16px; }
         #logTable button { width: auto; margin: 0; padding: 5px 10px; font-size: 14px; background-color: #f44336; }
         #logTable button:hover { background-color: #d32f2f; }
-        #pointsSummary { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
-        #pointsTarget { margin: 10px auto 5px; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
+        #pointsSummary { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 100%; text-align: left; }
+        #pointsTarget { margin: 10px auto 5px; font-size: 18px; font-weight: bold; width: 75%; text-align: center; border: 1px solid #ccc; padding: 8px; color: #4CAF50; box-sizing: border-box; font-family: Verdana, sans-serif; }
     </style>
 </head>
 <body>
     <h1>Daily Points Journal</h1>
     <div id="pointsTarget"></div>
-    <label for="dailyBudget">Daily Points Target:</label>
-    <input type="number" id="dailyBudget" placeholder="Enter daily points target">
-    <button id="setTargetButton" onclick="setDailyBudget()">Set Target</button>
-    <label for="points">Points:</label>
-    <input type="number" id="points" placeholder="Enter points">
-    <label for="food">Food Description:</label>
-    <input type="text" id="food" placeholder="Enter food description">
-    <button id="saveButton" onclick="saveLog()">Save</button>
-    <button id="homeButton" onclick="goHome()">Home</button>
-    <table id="logTable">
-        <thead>
-            <tr>
-                <th>Food</th>
-                <th>Points</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody id="logBody"></tbody>
-    </table>
-    <div id="pointsSummary"></div>
+    <div class="target-section">
+        <label for="dailyBudget">Daily Points Target:</label>
+        <input type="number" id="dailyBudget" placeholder="Enter daily points target">
+        <button id="setTargetButton" onclick="setDailyBudget()">Set Target</button>
+    </div>
+    <div class="journal-section">
+        <label for="points">Points:</label>
+        <input type="number" id="points" placeholder="Enter points">
+        <label for="food">Food Description:</label>
+        <input type="text" id="food" placeholder="Enter food description">
+        <button id="saveButton" onclick="saveLog()">Save</button>
+        <button id="homeButton" onclick="goHome()">Home</button>
+        <table id="logTable">
+            <thead>
+                <tr>
+                    <th>Food</th>
+                    <th>Points</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="logBody"></tbody>
+        </table>
+        <div id="pointsSummary"></div>
+    </div>
     <button id="resetButton" onclick="resetAll()">Reset All</button>
     <script>
         if ('serviceWorker' in navigator) {
