--- a/log.html
+++ b/log.html
@@ -6,15 +6,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Daily Points Journal</title>
     <link rel="apple-touch-icon" href="icon.png">
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body { font-family: Arial, sans-serif; max-width: 400px; margin: 0 auto; padding: 20px; }
-        h1 { width: 75%; margin: 0 auto; text-align: center; }
-        label { display: block; margin: 10px auto 5px; font-size: 18px; width: 75%; text-align: left; }
-        input { width: 75%; padding: 8px; box-sizing: border-box; margin: 0 auto; display: block; font-size: 16px; }
         .target-section { width: 75%; margin: 0 auto 10px; border: 2px solid #ccc; padding: 10px; }
         .journal-section { width: 75%; margin: 0 auto; border: 2px solid #ccc; padding: 10px; }
-        button { width: 75%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer; margin: 20px auto 0; display: block; font-size: 18px; }
-        button:hover { background-color: #45a049; }
         #saveButton { margin-top: 10px; }
         #homeButton { margin-top: 10px; }
         #resetButton { margin-top: 10px; background-color: #f44336; }
@@ -24,7 +19,6 @@
         #logTable button { width: auto; margin: 0; padding: 5px 10px; font-size: 14px; background-color: #f44336; }
         #logTable button:hover { background-color: #d32f2f; }
         #pointsSummary { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 100%; text-align: left; }
-        #pointsTarget { margin: 10px auto 5px; font-size: 18px; font-weight: bold; width: 75%; text-align: center; border: 1px solid #ccc; padding: 8px; color: #4CAF50; box-sizing: border-box; font-family: Verdana, sans-serif; }
     </style>
 </head>
 <body>
