--- a/index.html
+++ b/index.html
@@ -6,21 +6,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>WW Diary</title>
     <link rel="apple-touch-icon" href="icon.png">
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body { font-family: Arial, sans-serif; max-width: 400px; margin: 0 auto; padding: 20px; }
-        h1 { width: 75%; margin: 0 auto; text-align: center; }
-        label { display: block; margin: 10px auto 5px; font-size: 18px; width: 75%; text-align: left; }
-        input { width: 75%; padding: 8px; box-sizing: border-box; margin: 0 auto; display: block; font-size: 16px; }
         #fiber { margin-bottom: 10px; }
         .button-container { display: flex; flex-direction: column; gap: 10px; width: 75%; margin: 10px auto 0; }
         .calculator-section { border: 2px solid #ccc; padding: 10px; }
         .calc-clear-buttons { display: flex; flex-direction: column; gap: 10px; }
         .journal-tracker-container { display: flex; flex-direction: column; gap: 10px; border: 2px solid #ccc; padding: 10px; }
-        button { width: 100%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer; font-size: 18px; }
-        button:hover { background-color: #45a049; }
         #logButton { display: none; }
         #result { margin: 20px auto 0; font-size: 18px; font-weight: bold; width: 75%; text-align: left; }
-        #pointsTarget { margin: 10px auto 5px; font-size: 18px; font-weight: bold; width: 75%; text-align: center; border: 1px solid #ccc; padding: 8px; color: #4CAF50; box-sizing: border-box; font-family: Helvetica, sans-serif; }
     </style>
 </head>
 <body>
